<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculateActivity">

    <Button
        android:id="@+id/calReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/areaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_marginTop="20dp"
        android:textStyle="italic|bold"
        android:layout_centerHorizontal="true"/>
    <ImageView
        android:id="@+id/circleAreaImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/circlearea"
        android:layout_below="@+id/areaTitle"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"/>
    <LinearLayout
        android:id="@+id/circleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/circleAreaImg"
        android:visibility="invisible">

        <TextView
            android:id="@+id/cirRadius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/circleRadius"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/radiusTxt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:hint="0.0"
            android:inputType="numberDecimal"
            android:layout_marginRight="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/triangleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:visibility="invisible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:src="@drawable/trianglearea"/>
    <LinearLayout
        android:id="@+id/triangleLayoutRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/triBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triBase"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/baseTxt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_weight="1"
            android:hint="0.0"
            android:inputType="numberDecimal"
            android:layout_marginRight="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/triangleLayoutRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/triHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triHeight"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/heightTxt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:hint="0.0"
            android:inputType="numberDecimal"
            android:layout_marginRight="20dp"/>
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ellipseLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:visibility="invisible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ellipsearea"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:id="@+id/ellipseLayoutRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/semiMajor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semiMajor"
                android:textAlignment="center"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"/>

            <EditText
                android:id="@+id/semiMajorTxt"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:hint="0.0"
                android:inputType="numberDecimal"
                android:layout_marginRight="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ellipseLayoutRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/semiMinor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semiMinor"
                android:textAlignment="center"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"/>

            <EditText
                android:id="@+id/semiMinorTxt"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:hint="0.0"
                android:layout_marginRight="20dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>